[package]
name = "jsonwebtoken-aws-lc"
version = "9.3.0"
authors = [
    "Vincent Prouillet <hello@vincentprouillet.com>",
    "Glen Henri J. De Cauwsemaecker <glen@plabayo.tech>"
]
license = "MIT"
readme = "README.md"
description = "Create and decode JWTs in a strongly typed way."
homepage = "https://github.com/glendc/jsonwebtoken-aws-lc"
repository = "https://github.com/glendc/jsonwebtoken-aws-lc"
keywords = ["jwt", "api", "token", "jwk"]
edition = "2021"
include = [
    "src/**/*",
    "benches/**/*",
    "tests/**/*",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]
rust-version = "1.73.0"

[dependencies]
aws-lc-rs = { version = "1.8.1", default-features = false, features = ["aws-lc-sys"] }
base64 = "0.22"
# For PEM decoding
pem = { version = "3", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_asn1 = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.4"
time = "0.3"

[features]
default = ["use_pem"]
use_pem = ["pem", "simple_asn1"]

[[bench]]
name = "jwt"
harness = false

[badges]
maintenance = { status = "passively-maintained" }
